update README and fix links

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,20 @@ Status](https://travis-ci.org/btskinner/duawranglr.svg?branch=master)](https://t
 [![GitHub
 release](https://img.shields.io/github/release/btskinner/duawranglr.svg)](https://github.com/btskinner/duawranglr)
 
+The guiding principle behind duawranglr is to make it easier for
+organizations to share data that contain protected elements and/or
+personally idenfiable information (PII) with researchers. There are
+two key problems this package attempts to solve:
+
+1. Data owners and reseachers may wish to collaborate on multiple
+projects, each with a different level of data security required;
+executing a unique data usage agreement (DUA) for each project can be
+time consuming and inefficient.  
+2. Administrators tasked with approving data requests do not always
+have the time or technical proficiency to closely review the code that
+reads, subsets, filters, and deidentifies data files according to a
+DUA.
+
 This package offers a set of functions to help users create shareable
 data sets from raw data files that contain protected elements. Relying
 on master crosswalk files that list restricted variables, package
@@ -28,3 +42,7 @@ Install the latest development version from Github with
 devtools::install_github('btskinner/duawranglr')
 ```
 
+## Usage
+
+See vignettes or [documentation site](https://btskinner.me/duawranglr)
+for package motivation and an example use case.
