updates to docs for release on CRAN

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,7 @@ options(width = 100)
 Status](https://travis-ci.org/btskinner/duawranglr.svg?branch=master)](https://travis-ci.org/btskinner/duawranglr)
 [![GitHub
 release](https://img.shields.io/github/release/btskinner/duawranglr.svg)](https://github.com/btskinner/duawranglr)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/duawranglr)](https://CRAN.R-project.org/package=duawranglr)
 
 The guiding principle behind duawranglr is to make it easier for
 organizations to share data that contain protected elements and/or
@@ -35,6 +36,12 @@ functions warn users about possible violations of data usage agreement
 and prevent writing protected elements.  
 
 ## Installation
+
+Install the latest released version from CRAN with
+
+```r
+install.packages('duawranglr')
+```
 
 Install the latest development version from Github with
 
