--- a/README.Rmd
+++ b/README.Rmd
@@ -9,8 +9,8 @@ output: md_document
 options(width = 100)
 ```
 
-[![Build
-Status](https://travis-ci.org/btskinner/duawranglr.svg?branch=master)](https://travis-ci.org/btskinner/duawranglr)
+[![R build
+status](https://github.com/btskinner/duawranglr/workflows/R-CMD-check/badge.svg)](https://github.com/btskinner/duawranglr/actions)
 [![GitHub
 release](https://img.shields.io/github/release/btskinner/duawranglr.svg)](https://github.com/btskinner/duawranglr)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/duawranglr)](https://CRAN.R-project.org/package=duawranglr)
@@ -40,16 +40,16 @@ and prevent writing protected elements.
 Install the latest released version from CRAN with
 
 ```r
-install.packages('duawranglr')
+install.packages("duawranglr")
 ```
 
 Install the latest development version from Github with
 
 ```r
-devtools::install_github('btskinner/duawranglr')
+devtools::install_github("btskinner/duawranglr")
 ```
 
 ## Usage
 
-See vignettes or [documentation site](https://btskinner.me/duawranglr)
+See vignettes or [documentation site](https://btskinner.io/duawranglr)
 for package motivation and an example use case.
